bug fix on transform links in new version of chrome where off screen links resulted in anti aliasing issues on component. added focus within to project links as well for a11y users

--- a/public/scss/partials/elements/_links.scss
+++ b/public/scss/partials/elements/_links.scss
@@ -22,6 +22,7 @@ ul.external-links {
             padding: calc(#{$rem-size-2} + #{$rem-size-1} / 2);
             display: block;
             @include eq-size(100%);
+            position: relative;
         }
 
         svg {
