--- a/public/scss/partials/elements/_projects.scss
+++ b/public/scss/partials/elements/_projects.scss
@@ -106,7 +106,8 @@
             }
         }
 
-        &:hover {
+        &:hover,
+        &:focus-within {
             box-shadow: 0 4px 4px rgba(0, 0, 0, .24), 0 0 4px rgba(0, 0, 0, .12), 0 6px 18px rgba(0, 0, 0, .12);
             transform: translate3d(0, -2px, 0);
         }
